# MyFastApi

./: main.py  pyproject.toml  pytest.ini
