[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Вадим <pvs.versia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.115.3" }
uvicorn = { extras = ["standard"], version = "^0.31.0" }
sqlalchemy = { extras = ["all"], version = "^2.0.36" }
isort = "^5.13.2"
pydantic-settings = "^2.6.0"
pydantic = "^2.9.2"
scrapy = "^2.11.2"
scrapy-playwright = "^0.0.41"
free-proxy = "^1.1.2"
scrapy-user-agents = "^0.1.1"
fake-useragent = "^1.5.1"
pytest = "^8.3.3"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["GO"]
known_third_party = [
    "uvicorn",
    "requests",
    "numpy",
    "pandas",
    "sqlalchemy",
    "pydantic",
    "fastapi",
    "starlette",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "Thirdparty libraries"
import_heading_firstparty = "My libraries"
no_lines_before = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
forced_separate = ["uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
